# CCAP-SmartPhantom

01-G4sim/: ReadMe.txt  startup.bash
01-G4sim/G4sim/: ._CMakeLists.txt  CMakeLists.txt  GNUmakefile  root2Ascii.cpp  run1.mac  vis.mac
01-G4sim/G4sim/Analysis/: SP-MatMaker.sh  SP-MatMakerAS.sh
01-G4sim/G4sim/Analysis/MatMaker/: .SP-MatMaker.cpp.swp  DataManager.cpp  DataManager.h  KWaveInput.cpp  KWaveInput.h  ProcessRoot.cpp  ProcessRoot.h  SP-MatMaker  (+2 more)
01-G4sim/G4sim/include/: Analysis.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RootIO.hh  Run.hh  RunAction.hh  SciFiHit.hh  SciFiSD.hh
01-G4sim/G4sim/src/: DetectorConstruction.cc  DetectorConstructionMessenger.cc  EventAction.cc  PrimaryGeneratorAction.cc  RootIO.cc  Run.cc  RunAction.cc  SciFiHit.cc  SciFiSD.cc
02-Analysis/: Analysis.root  README.md  startup.bash
02-Analysis/00-Documentation/: ReadMe.txt
02-Analysis/01-Code/: Analysis.cpp  Analysis.hpp  RunControl.cpp  RunControl.hpp  nuAnalysis.cpp  nuAnalysis.hpp
02-Analysis/02-Tests/: 2021-11-27-integration-test-log.txt  2021-12-05-integration-test-log.txt  AnalysisTst-compile.bash  AnalysisTst.cpp  RunControlTst-compile.bash  RunControlTst.cpp  intregration-test.bash  nuAnalysisTst-compile.bash  nuAnalysisTst.cpp
02-Analysis/03-Skeleton/: Analysis-skeleton-compile.bash  Analysis-skeleton.cpp
02-Analysis/11-Obj/: ReadMe.txt
02-Analysis/12-Bin/: .gitignore  ReadMe.txt
02-Analysis/31-Data/: .waterhits.root.icloud
02-Analysis/99-Scratch/: .gitignore  ReadMe.txt
G4sim/: smartphantom.cc  vis.mac
G4sim/Analysis/: SP-MatMaker.sh
G4sim/Analysis/MatMaker/: ProcessRoot.cpp  ProcessRoot.h
G4sim/include/: DetectorConstruction.hh  EventAction.hh  RunAction.hh  SciFiHit.hh
G4sim/src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorConstructionMessenger.cc  PrimaryGeneratorAction.cc  SciFiSD.cc
LMU_design/: ReadMe.txt  startup.bash
LMU_design/G4sim/: .vis.mac.swp  CMakeLists.txt  init_vis.mac  vis.mac
LMU_design/G4sim/Analysis/: SP-MatMaker.sh
LMU_design/G4sim/Analysis/MatMaker/: DataManager.cpp  DataManager.h  KWaveInput.cpp  ProcessRoot.cpp  ProcessRoot.h  SP-MatMaker.cpp  SP-MatMakerAS.cpp
LMU_design/G4sim/include/: ActionInitialization.hh  DetectorConstruction 2.hh  DetectorConstruction.hh  DetectorConstructionMessenger.hh  EventAction.hh  ParameterInitialization.hh  Parameters.hh  PrimaryGeneratorAction.hh  RootIO.hh  Run.hh  SciFiHit.hh  SciFiSD.hh
LMU_design/G4sim/src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorConstructionMessenger.cc  EventAction.cc  ParameterInitialization.cc  Parameters.cc  PrimaryGeneratorAction.cc  RootIO.cc  Run 2.cc  Run.cc  RunAction.cc  SciFiHit.cc  SciFiSD.cc
(+3 files in other folders)
